<resources>
    <string name="app_name">YouVerifyTest</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="product_image">Product image</string>
    <string name="_0_00">$56.60</string>
    <string name="soft_element_jack">Soft Element Jack</string>
    <string name="discover_products">Discover Products</string>
    <string name="settings">settings</string>
    <string name="sofas">Sofas</string>
    <string name="bag">Bag</string>
    <string name="star">star</string>
    <string name="_4_8">4.8</string>
    <string name="_no_of_reviews">%1$d reviews</string>
    <string name="the_inspiration_for_the_design_of_this_bag_comes_from_the_industrial_style_of_the_first_half_of_the_last_century_which_is_complemented_by_the_most_modern_features">The inspiration for the design of this bag comes from the industrial style of the first half of the last century, which is complemented by the most modern features.</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="minus">minus</string>
    <string name="_4">4</string>
    <string name="plus">plus</string>
    <string name="price_label">$%1$.2f</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cart_image">Cart Image</string>
    <string name="remove">REMOVE</string>
    <string name="icon">ICON</string>
    <string name="quantity">Quantity:</string>
    <string name="checkout_with_price">CHECKOUT ($%s)</string>
    <string name="default_checkout_price">CHECKOUT ($0.00)</string>
    <string name="error_image">error image</string>
    <string name="unknown_error_occurred">Unknown Error Occurred</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="welcome_back">Welcome Back👋🏼</string>
    <string name="email">Email</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="click_to_setup_biometrics">Click to setup Fingerprint</string>
    <string name="login">Login</string>
    <string name="are_you_a_new_user">Are you a new user? </string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="create_account">Create Account</string>
    <string name="have_an_existing_account">Have an Existing Account?</string>
    <string name="create_your_account">Create your Account</string>
    <string name="login_successful">Login Successful</string>
    <string name="unable_to_create_account">Unable to create Account</string>
    <string name="account_created_successfully">Account Created Successfully</string>
    <string name="successful">Payment completed successful</string>
    <string name="cancelled">Payment Cancelled</string>
    <string name="failed">Payment Failed</string>
</resources>