<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Product Image -->
    <ImageView
        android:id="@+id/product_image"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:contentDescription="@string/product_image"
        android:scaleType="centerInside"
        android:src="@drawable/bag" />

    <!-- Product Name -->
    <TextView
        android:id="@+id/product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/soft_element_jack"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <!-- Product Price -->
    <TextView
        android:id="@+id/product_price"
        android:layout_width="match_parent"
        android:layout_marginTop="7dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/_0_00"
        android:textSize="20sp" />


</LinearLayout>