<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="15dp"
    android:paddingEnd="15dp"
    tools:context=".presentation.screens.auth.CreateAccountFragment">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:height="28dp"
        android:gravity="center_horizontal"
        android:text="@string/create_your_account"
        android:textSize="20sp"
        android:theme="@style/General.Text.Style" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:text="@string/email"
            android:textAlignment="textStart"
            android:textSize="20sp"
            android:theme="@style/General.Text.Style" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signup_email_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signup_email_input_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/enter_your_email" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:text="@string/password"
            android:textAlignment="textStart"
            android:textSize="20sp"
            android:theme="@style/General.Text.Style" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signup_password_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signup_password_input_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/enter_your_password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:text="@string/confirm_password"
            android:textAlignment="textStart"
            android:textSize="20sp"
            android:theme="@style/General.Text.Style" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirm_password_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirm_password_input_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/confirm_your_password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="bottom"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/create_acct_button"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:id="@+id/create_acct_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/black"
                android:clickable="true"
                android:focusable="true"
                android:longClickable="true"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/create_account"
                    android:textColor="@color/white"
                    android:theme="@style/General.Text.Style" />

                <ProgressBar
                    android:id="@+id/signup_progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:indeterminateTint="@color/white"
                    android:visibility="gone" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:gravity="bottom"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:text="@string/have_an_existing_account"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/login_text"
                android:layout_width="48dp"
                android:layout_height="24dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="2dp"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_horizontal"
                android:linksClickable="true"
                android:text="@string/login"
                android:textSize="14sp"
                android:theme="@style/General.Text.Style" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
