<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.screens.ProductDetailsFragment">


    <ProgressBar
        android:id="@+id/details_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/top_item"
        android:layout_marginBottom="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ProgressBar
                    android:id="@+id/image_progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/product_detail_image"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:contentDescription="@string/bag"
                    android:scaleType="fitCenter"
                    android:src="@drawable/bag"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/star_icon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/star"
                    android:src="@drawable/star"
                    app:tint="@color/orange" />

                <TextView
                    android:id="@+id/rating"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/_4_8"
                    android:textSize="16sp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/reviews"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="@string/_no_of_reviews"
                    app:chipBackgroundColor="@color/light_grey"
                    app:chipCornerRadius="30dp"
                    app:chipStrokeWidth="0dp" />

            </LinearLayout>

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/soft_element_jack"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:justificationMode="inter_word"
                android:text="@string/the_inspiration_for_the_design_of_this_bag_comes_from_the_industrial_style_of_the_first_half_of_the_last_century_which_is_complemented_by_the_most_modern_features"
                android:textSize="14sp" />


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/bottom_item"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:background="@color/off_white"
        android:backgroundTint="@color/off_white"
        android:gravity="bottom"
        android:elevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:text="@string/_0_00"
            android:textSize="22sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_to_cart"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:backgroundTint="@color/black"
            android:gravity="center"
            android:text="@string/add_to_cart"
            android:visibility="visible"
            app:cornerRadius="12dp" />

        <LinearLayout
            android:id="@+id/quantity"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone">

            <ImageButton
                android:id="@+id/minus"
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:layout_margin="5dp"
                android:layout_gravity="center"
                android:background="@drawable/rounded_corners"
                android:contentDescription="@string/minus"
                android:src="@drawable/minus" />

            <TextView
                android:id="@+id/quantity_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/_4"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/plus"
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:layout_gravity="center"
                android:background="@drawable/rounded_corners"
                android:backgroundTint="@color/black"
                android:contentDescription="@string/plus"
                android:src="@drawable/add" />
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>