<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="8dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="70dp">
            <ImageView
                android:layout_width="85dp"
                android:id="@+id/cart_image"
                android:src="@drawable/bag"
                android:layout_height="match_parent"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/soft_element_jack"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:id="@+id/cart_item_title"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:id="@+id/cart_item_price"
                    android:textSize="18sp"
                    android:layout_marginStart="10dp"
                    android:text="@string/_0_00"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/cart_item_remove_button"
                android:gravity="center"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/delete"
                    android:tint="@color/black"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:text="REMOVE"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/quantity_layout"
                android:visibility="visible"
                android:layout_gravity="end"
                android:gravity="end"
                android:layout_marginStart="15dp"
                android:orientation="horizontal">
                <ImageButton
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:contentDescription="@string/minus"
                    android:id="@+id/cart_item_minus_button"
                    android:background="@drawable/rounded_corners"
                    android:layout_gravity="center"
                    android:src="@drawable/minus"
                    android:backgroundTint="@color/black"/>

                <TextView
                    android:id="@+id/quantity_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:text="@string/_4"
                    android:textSize="18sp" />
                <ImageButton
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:id="@+id/cart_item_add_button"
                    android:layout_gravity="center"
                    android:background="@drawable/rounded_corners"
                    android:backgroundTint="@color/black"
                    android:contentDescription="@string/plus"
                    android:src="@drawable/add"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>