<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.screens.CartFragment">

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        android:id="@+id/cart_progress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:orientation="vertical"
            android:id="@+id/error_layout"
            android:layout_gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:id="@+id/error_image"
                android:layout_gravity="center"
                android:contentDescription="@string/error_image"
                android:src="@drawable/empty_cart"
                app:tint="@color/grey" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:id="@+id/error_text"
                android:textSize="12sp"
                android:textColor="@color/grey"
                android:layout_gravity="center"
                android:text="@string/unknown_error_occurred"/>
        </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cart_recyclerview"
        android:name="com.timife.youverifytest.presentation.CartFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:spanCount="2"
        tools:context=".presentation.screens.CartFragment"
        tools:listitem="@layout/cart_list_item" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/white"
        android:elevation="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/checkout"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:id="@+id/checkout_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/button_selector"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                android:elevation="2dp"
                android:focusable="true"
                android:longClickable="true"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:id="@+id/checkout_text"
                    android:text="@string/default_checkout_price"
                    android:textColor="@color/white"
                    android:theme="@style/General.Text.Style" />

                <ProgressBar
                    android:id="@+id/checkout_progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:indeterminateTint="@color/white"
                    android:visibility="gone" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>